# Multiproc-openCL

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml  clang-tidy  config.h.in  cross_checking.c  driver.c  driver.h  main.c  occulsion_filling.c  setup.sh  test.sh  zncc_c_imp.c
.github/workflows/: cmake-multi-platform.yml
.run/: flow5 b.run.xml  flow5.run.xml  mp b.run.xml  mp.run.xml  opt.run.xml  opt_benchmark.run.xml  platform.run.xml
command-queue/: test.c
context/: test.c
data/sample/: calib.txt
hello-world/: hello_world.cl
include/: calc_pi.h  cross_checking.h  driver.h  logger.h  occlusion_filling.h  occlusion_filling_mt.h  opencl_include.h  pngloader.h  util.h  zncc_c_imp.h
include/opencl/: opencl_flow_ex3.h  opencl_flow_ex5.h  opencl_flow_ex6.h
include/pngloader/: pngloader.h
include/util/: util.h
kernel/: test.c
learning/: CMakeLists.txt
learning/buffer/: test.c
learning/command-queue/: blank.cl  test.c
learning/context/: test.c
learning/hello-world/: CMakeLists.txt  hello_world.cl  test.c
learning/image-format-support/: CMakeLists.txt  test.c
learning/kernel/: CMakeLists.txt  KernelTest.cpp  test.c  test.cl  test.h
learning/load_unload_images/: test.c
learning/mapNcopy/: blank.cl  test.c
learning/platform/: CMakeLists.txt  test.c
learning/program/: bad.cl  good.cl  test.c
lib/: CMakeLists.txt
lib/lodepng/: CMakeLists.txt
platform/: test.c
program/: test.c
project/: CMakeLists.txt
project/image_to_grayscale/: CMakeLists.txt  Makefile  color_to_gray.cl  config_im_to_g.h.in  test.c  test.cl
project/kernel_search/: CMakeLists.txt  config_kernel_search.h.in  kernel_search  test.c  test.cl
project/kernel_search/kernel_search.dSYM/Contents/: Info.plist
project/kernel_search/kernel_search.dSYM/Contents/Resources/DWARF/: kernel_search
project/kernel_search/kernel_search.dSYM/Contents/Resources/Relocations/aarch64/: kernel_search.yml
project/matAdd/: CMakeLists.txt  matrix_add.cl  test.c
project/matMul/: CMakeLists.txt  mat_mul.cl  test.c
project/opencl_flow_ex3/: CMakeLists.txt  opencl_flow_ex3.c  test.c  test.cl
project/opencl_flow_ex5/: CMakeLists.txt  config_im_to_g.h.in  opencl_flow_ex5.c  test.cl
project/opencl_flow_ex6/: CMakeLists.txt  opencl_flow_ex6.c  test.cl
project/zncc_c/: CMakeLists.txt  config_zncc_c.h.in  zncc_c.c  zncc_c.h
src/: calc_pi_mt.c  cross_checking.c  driver.c  logger.c  occlusion_filling.c  occlusion_filling_mt.c  pngloader.c  util.c  zncc_c_imp.c
src/pngloader/: pngloader.c
src/util/: util.c
test/: test.c
tests/: CMakeLists.txt  ExampleTests.cpp  NeighbourTests.cpp
